##add_subdirectory("boost")
## Unnecessary; it's in the system libs
#add_subdirectory("curl")
##add_subdirectory("j2k")
#xxx From comments in jasper, this isn't much used.
##add_subdirectory("j2k/jasper")
add_subdirectory("j2k/openjpeg")
add_subdirectory("jars")
##add_subdirectory("jpeg")
##add_subdirectory("numpy")
add_subdirectory("openssl")
add_subdirectory("pcre")
##add_subdirectory("sql")
add_subdirectory("uuid")
##add_subdirectory("xml")

if(XML_LAYER EQUAL "expat")
    add_subdirectory("xml/expat")
elseif(XML_LAYER EQUAL "libxml")
    add_subdirectory("xml/libxml")
else()
    add_subdirectory("xml/xerces")
endif()

add_subdirectory("zlib")
