add_subdirectory("boost")
#add_subdirectory("curl") # this is handled in coda_find_system_dependencies
add_subdirectory("j2k")
add_subdirectory("jars")
add_subdirectory("jpeg")
#add_subdirectory("numpy") # this is handled in coda_find_system_dependencies
add_subdirectory("pcre")
add_subdirectory("sql")
add_subdirectory("uuid")
add_subdirectory("xml")
add_subdirectory("zlib")
